# x64_mcp

./: .gitignore  README.md  init.py  pyproject.toml
examples/: claude_mcp_config.json
src/x64dbg_mcp_fw/: __init__.py  __main__.py  config.py  recipes.py  server.py  session.py  skills.py  snapshot.py  vm.py
